# ak_curve

./: CMakeLists.txt  README.md
ak_curve_demo/: CMakeLists.txt  Source.c
ak_curve_lib/: CMakeLists.txt  curve.c  curve.h
ak_curve_tests/: CMakeLists.txt  tests.c  tests.h
ak_curve_tests_check/: CMakeLists.txt  Source.c
